$Id$

Sat Mar 13 11:57:20 PST 2010  Basil Gunn <basil@pacabunga.com>

    * Get rid of version number file.
    * Version number now pulled from string defined in configure.ac
      Files modified:
        configure.ac
        wl2kax25.c    
        wl2ktelnet.c    
        wl2kserial.c
      File deleted:  
        version.h

Thu Mar 11 15:12:00 PST 2010  Basil Gunn <basil@pacabunga.com>

    * Add version number to wl2kxxxx programs.
    * wl2kax25, wl2ktelnet & wl2kserial now pass command line
      arguments as option args instead of being positional.
      Files modified:
        wl2kax25.c    
        wl2ktelnet.c    
        wl2kserial.c    
        wl2k.conf.dist
      Files added:
        version.h <- project version # 0.5(0)

    * Add reading config file functionality to wlk2kax25, wl2ktelnet,
      and wl2kserial.
      File modified:  Makefile.am

    * Add default values for command line options.
    * Fix parsing problem when '#' is first char in a line. 
      Files modified:
        conf.h
        conf.c

Wed Mar  3 16:34:40 PST 2010  Basil Gunn <basil@pacabunga.com>

    * Fix for bug # 2958148, message retrieval latency.
      Mbo mail header is now dependent on From mail header.
      File modified:  mime2wl.c

Thu Feb 11 15:52:59 PST 2010  Basil Gunn <basil@pacabunga.com>

    * Fix for bug # 2950104 excessive proposal deletion.
    * Add check for unlink failure.
      File modified:  wl2k.c

Wed Feb 03 09:56 PST 2010  Basil Gunn <basil@pacabunga.com>

    * Fix for Bug # 2945529 sending multiple messages or messages
      larger than around 250 bytes over writes output buffer.
      Files modified:
        wl2kax25.c
        wl2k.c

Fri Jan 22 17:10 PST 2010  Basil Gunn <basil@pacabunga.com>

    * Add a command line option (-m) to allow receiving messages
      sent to yourself.  Helpful for debugging & mimics behavior
      of Airmail3.exe.
      Files modified:
        mid.h
        mime2wl.h
        mid.c
        mime2wl.c