@@ -1,5 +1,10 @@
 $Id$
 
+Sat Mar 13 12:29:53 PST 2010  Basil Gunn <basil@pacabunga.com>
+
+    * Outbound sid string now displays PACKAGE_VERSION number.
+      File modified:  wl2k.c
+
 Sat Mar 13 11:57:20 PST 2010  Basil Gunn <basil@pacabunga.com>
 
     * Get rid of version number file.
